Opened 7 years ago

Closed 7 years ago

#13711 closed bug (fixed)

Deskbar tray border missing

Reported by: perelandra Owned by: jscipione
Priority: normal Milestone: Unscheduled
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When then Deskbar is in horizontal mode (full top or bottom) the border between the tray and the applications list is now missing. This happened since the recent Deskbar changes.

Attachments (2)

deskbar1.png (10.7 KB ) - added by perelandra 7 years ago.
Before change
deskbar2.png (13.1 KB ) - added by perelandra 7 years ago.
After change

Download all attachments as: .zip

Change History (6)

by perelandra, 7 years ago

Attachment: deskbar1.png added

Before change

comment:1 by perelandra, 7 years ago

patch: 01

by perelandra, 7 years ago

Attachment: deskbar2.png added

After change

comment:2 by jscipione, 7 years ago

I see 1px of the border is still there at the bottom, but the rest has been covered up... will investigate why.

comment:3 by pulkomandy, 7 years ago

patch: 10

comment:4 by jscipione, 7 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev51463

Note: See TracTickets for help on using tickets.