Deskbar: Move tray past border in horizontal mode

Fixes #13711